cleaning up and bettering semantic tags

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             <h1  class="card-heading">How did we do?</h1>
             <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
             <div class="card-feedback">
-                 <div class="score-container">
-                    <div class="score">
+                 <form class="score-container">
+                    <button type="submit" class="score">
                         <small>1</small>
-                    </div>
-                      <div class="score">
+                    </button>
+                      <button type="submit" class="score">
                         <small>2</small>
-                    </div>
-                      <div class="score">
+                    </button type="submit">
+                      <button type="submit" class="score">
                         <small>3</small>
-                    </div>
-                      <div class="score">
+                    </button type="submit">
+                      <button type="submit" class="score">
                         <small>4</small>
-                    </div>
-                      <div class="score active">
+                    </button type="submit">
+                      <button type="submit" class="score">
                         <small>5</small>
-                    </div>
-                 </div>
+                    </button type="submit">
+                 </form>
                 <button class="btn" id="btn" type="submit">Submit</button>
             </div>
         </section>
