--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                     </button>
                       <button type="submit" class="score">
                         <small>2</small>
-                    </button type="submit">
+                    </button >
                       <button type="submit" class="score">
                         <small>3</small>
-                    </button type="submit">
+                    </button >
                       <button type="submit" class="score">
                         <small>4</small>
-                    </button type="submit">
+                    </button >
                       <button type="submit" class="score">
                         <small>5</small>
-                    </button type="submit">
+                    </button >
                  </form>
                 <button class="btn" id="btn" type="submit">Submit</button>
             </div>
